// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`questionnaireItem snapshot tests renders correctly with error 1`] = `
<div
  className="item"
  style={
    Object {
      "alignContent": "center",
      "padding": "12px",
    }
  }
>
  <label>
    <h4>
      Test question
    </h4>
    <div>
      Left item
      <span
        style={
          Object {
            "padding": "0px 12px",
          }
        }
      >
        <input
          data-testid="test_id-0"
          name="test_id-0"
          onChange={[Function]}
          style={
            Object {
              "margin": "2px",
            }
          }
          type="radio"
          value={0}
        />
        <input
          data-testid="test_id-1"
          name="test_id-1"
          onChange={[Function]}
          style={
            Object {
              "margin": "2px",
            }
          }
          type="radio"
          value={1}
        />
        <input
          data-testid="test_id-2"
          name="test_id-2"
          onChange={[Function]}
          style={
            Object {
              "margin": "2px",
            }
          }
          type="radio"
          value={2}
        />
        <input
          data-testid="test_id-3"
          name="test_id-3"
          onChange={[Function]}
          style={
            Object {
              "margin": "2px",
            }
          }
          type="radio"
          value={3}
        />
        <input
          data-testid="test_id-4"
          name="test_id-4"
          onChange={[Function]}
          style={
            Object {
              "margin": "2px",
            }
          }
          type="radio"
          value={4}
        />
      </span>
      Right item
    </div>
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      Test error
    </span>
  </label>
</div>
`;

exports[`questionnaireItem snapshot tests renders correctly with no error 1`] = `
<div
  className="item"
  style={
    Object {
      "alignContent": "center",
      "padding": "12px",
    }
  }
>
  <label>
    <h4>
      Test question
    </h4>
    <div>
      Left item
      <span
        style={
          Object {
            "padding": "0px 12px",
          }
        }
      >
        <input
          data-testid="test_id-0"
          name="test_id-0"
          onChange={[Function]}
          style={
            Object {
              "margin": "2px",
            }
          }
          type="radio"
          value={0}
        />
        <input
          data-testid="test_id-1"
          name="test_id-1"
          onChange={[Function]}
          style={
            Object {
              "margin": "2px",
            }
          }
          type="radio"
          value={1}
        />
        <input
          data-testid="test_id-2"
          name="test_id-2"
          onChange={[Function]}
          style={
            Object {
              "margin": "2px",
            }
          }
          type="radio"
          value={2}
        />
        <input
          data-testid="test_id-3"
          name="test_id-3"
          onChange={[Function]}
          style={
            Object {
              "margin": "2px",
            }
          }
          type="radio"
          value={3}
        />
        <input
          data-testid="test_id-4"
          name="test_id-4"
          onChange={[Function]}
          style={
            Object {
              "margin": "2px",
            }
          }
          type="radio"
          value={4}
        />
      </span>
      Right item
    </div>
    
  </label>
</div>
`;
